fix nav wrapping

--- a/packages/site_package/Resources/Public/Css/header.css
+++ b/packages/site_package/Resources/Public/Css/header.css
@@ -27,8 +27,7 @@
     column-gap: 2.5rem;
 
     @media (width <= 640px) {
-        flex-direction: column;
-        row-gap: 0.5rem;
+        gap: 0.5rem 1rem;
     }
 }
 
@@ -52,10 +51,10 @@
 
 .lang-nav {
     display: flex;
-    flex-wrap: wrap;
     align-items: flex-end;
     font-size: var(--fs-sm);
     gap: 1rem;
+    text-transform: uppercase;
 
     @media (width <= 640px) {
         text-align: right;
